scripts/hermes_fuzz_executed/fuzz_42_execution
'use strict';
'';
let arr = ['a', 2, new Date('1999/12/31'), true, undefined, null, NaN, 3.4, undefined, obj, undefined, function () {}, null];
let str = '123';
let c = 'ABC';
let arr2 = [str, f, arr, c, /abc/, {a: 'a'}, []];
let arr3 = [...new Set([1, 2, 2, 3, 3])];
let obj2 = {1: '', 2: true, 3: undefined};
let obj3 = {1: 1, 2: '2', 3: /a/g, 4: NaN};
let val = {1: 0, 2: 't', 3:'string', 4: 1};
let obj4 = {1: function () {}, 2: undefined, 3: 'a', 4: true};
let obj5 = {1: undefined, 2: [], 3: 1, 4: () => {};};
let obj6 = {a: true, b: false, c: Object.create(null), e: [], h: {1: 0, 2: 1, 3: '0'}, i: [], j: NaN, k: undefined, l: null, m: 3.4, k1: '1'};
let obj7 = {a: true, b: undefined, c: /a/g, e: 'ab', h: '0', i: null, j: '0', k: null, l: true, m: true, p: () => {}, j1: 't', j2: 'a', j3: true, j4: NaN, j5: undefined, j6: null,...val, c1: new Set([1, 2]), c2: new Map([[1, 2], [3, 4]]), c3: obj2, c4: obj3, d: () => {return 'c';}, c5: /ab/, c6: 2};
let obj8 = {a: null, b: false, c: () => {}, d: 1, e: '', f: null, g: '', h1: 1, h2: /0/, h3: new Date('1999/12/31'), i: undefined, j: 3};
let obj9 = obj;
let obj10 = {a: 3.4, b: -5};
let obj11 = {0: NaN, 1: +1, 2: 'false', 3: [], 4: {}, 5: 'true'};
let obj12 = '';
let obj13 = [obj, Number, Date, Math, obj2, {1: undefined, 2: null}, null, undefined, 0x7fffffff, undefined];
let obj14 = new Map([['a', 1], [2, 3]]);
let obj15;
'';

obj[1] = undefined;

Object.prototype.c;
Object.prototype.value;
Object.prototype.toString;
obj.constructor;

[obj, Infinity, NaN, null];
[NaN, undefined, true];
undefined!= null;
[undefined, null];

Object.prototype[Symbol.toStringTag];
[undefined, Symbol(), Symbol(0), Symbol.for('a'), Symbol.

Execution Output ------------------:
test.js:12:51: error: '}' expected at end of object literal '{...'
let obj5 = {1: undefined, 2: [], 3: 1, 4: () => {};};
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
